--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           <td>1942</td>
           <td>johnbiden@gmail.com</td>
           <td>000-111-2222</td>
-          <td><a class="btn btn--edit text-primary" href="details.html"> <span><i class="far fa-edit"></i></span><span class="ml-2">Chỉnh sửa</span></a><span>|</span>
+          <td><a class="btn btn--edit text-primary" href="edit.html"> <span><i class="far fa-edit"></i></span><span class="ml-2">Chỉnh sửa</span></a><span>|</span>
             <button class="btn btn--delete text-danger"><span><i class="fas fa-trash-alt"></i></span><span class="ml-2">Xóa</span></button>
           </td>
         </tr>
@@ -33,7 +33,7 @@
           <td>1984</td>
           <td>kimjongun@gmail.com</td>
           <td>000-111-3333</td>
-          <td><a class="btn btn--edit text-primary" href="details.html"> <span><i class="far fa-edit"></i></span><span class="ml-2">Chỉnh sửa</span></a><span>|</span>
+          <td><a class="btn btn--edit text-primary" href="edit.html"> <span><i class="far fa-edit"></i></span><span class="ml-2">Chỉnh sửa</span></a><span>|</span>
             <button class="btn btn--delete text-danger"> <span><i class="fas fa-trash-alt"></i></span><span class="ml-2">Xóa</span></button>
           </td>
         </tr>
@@ -42,7 +42,7 @@
           <td>1952</td>
           <td>vladimirputin@gmail.com</td>
           <td>000-111-4444</td>
-          <td><a class="btn btn--edit text-primary" href="details.html"> <span><i class="far fa-edit"></i></span><span class="ml-2">Chỉnh sửa</span></a><span>|</span>
+          <td><a class="btn btn--edit text-primary" href="edit.html"> <span><i class="far fa-edit"></i></span><span class="ml-2">Chỉnh sửa</span></a><span>|</span>
             <button class="btn btn--delete text-danger"> <span><i class="fas fa-trash-alt"></i></span><span class="ml-2">Xóa</span></button>
           </td>
         </tr>
