--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           <td> </td>
           <td> </td>
           <td> </td>
-          <td><a class="btn btn--edit text-primary" href="edit.html"> <span><i class="far fa-edit"></i></span><span class="ml-2">Chỉnh sửa</span></a><span>|</span>
+          <td><a class="btn btn--edit text-primary" href="#"> <span><i class="far fa-edit"></i></span><span class="ml-2">Chỉnh sửa</span></a><span>|</span>
             <button class="btn btn--delete text-danger"><span><i class="fas fa-trash-alt"></i></span><span class="ml-2">Xóa</span></button>
           </td>
         </tr>
@@ -51,6 +51,12 @@
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script>
+      $(".btn--edit").click(() => {
+        console.log(this);
+      });
+      
+    </script>
     <script src="script.js"></script>
   </div>
 </body>
