--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container d-flex flex-column justify-content-center align-items-center mt-5"> 
-    <h1 class="text-center">Danh sách học viên</h1><a class="bg-success align-self-start btn btn--add my-5" href="details.html"><span class="text-light"> <i class="fas fa-plus-circle"></i></span><span class="text-light ml-2">Thêm học viên </span></a>
+    <h1 class="text-center">Danh sách học viên</h1><a class="bg-success align-self-start btn btn--add my-5" href="create.html"><span class="text-light"> <i class="fas fa-plus-circle"></i></span><span class="text-light ml-2">Thêm học viên </span></a>
     <table class="table table-striped">
       <thead class="thead-dark">
         <tr class="table-head">
