--- a/public/create.html
+++ b/public/create.html
@@ -55,7 +55,7 @@
       });
       
       $(".modal--back").click(() => {
-        //location.replace("index.html");
+        location.replace("index.html");
         $.post(
           "https://changable-list-test.herokuapp.com/users",
           {
