--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
           <th>Năm sinh</th>
           <th>Email</th>
           <th>Số điện thoại</th>
-          <th class="text-center"> <i class="fas fa-trash-alt mr-2"></i>Xóa các mục được chọn</th>
+          <th class="text-center btn--delete-selected"> <i class="fas fa-trash-alt mr-2"></i>Xóa các mục được chọn</th>
           <th> 
             <input type="checkbox">
           </th>
