--- a/public/create.html
+++ b/public/create.html
@@ -57,7 +57,7 @@
           }
         ).done(function() {
             $(".body-text").html(`
-              Thêm học viên ${$("input")[0].value} thành công!
+              Thêm học viên <span class="bold-font">${$("input")[0].value}</span> thành công!
               <br>
               Bạn có muốn quay về trang chủ?`
             )
