--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
           <div class="modal-body">
             <p class="modal__text"></p>
           </div>
-          <div class="modal-footer d-flex justify-content-center"><a class="btn btn-success modal--success" data-dismiss="modal">OK</a><a class="btn btn-secondary modal--cancel ml-4" data-dismiss="modal">Hủy bỏ</a></div>
+          <div class="modal-footer d-flex justify-content-center"><a class="btn btn-success modal--success" data-dismiss="modal">Xác nhận</a><a class="btn btn-secondary modal--cancel ml-4" data-dismiss="modal">Hủy bỏ</a></div>
         </div>
       </div>
     </div>
