--- a/public/create.html
+++ b/public/create.html
@@ -61,6 +61,7 @@
               <br>
               Bạn có muốn quay về trang chủ?`
             )
+            $("input").val("");
           })
       });
       
