--- a/public/create.html
+++ b/public/create.html
@@ -11,7 +11,9 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-body">
-            <p class="body-text"></p>
+            <div class="body-text">
+              <div class="spinner-border mx-auto d-block"></div>
+            </div>
           </div>
           <div class="modal-footer d-flex justify-content-center">
             <button class="btn btn-success modal--back mr-4" type="button" data-dismiss="modal">Quay về trang chủ</button>
