--- a/public/edit.html
+++ b/public/edit.html
@@ -22,8 +22,8 @@
         </div>
       </div>
     </div>
-    <h1 class="text-center">Thêm mới học viên</h1>
-    <form class="w-100" action="">
+    <h1 class="text-center">Chỉnh sửa thông tin</h1>
+    <form class="main-form w-100" action="">
       <div class="form-group">
         <label for="name">Họ tên <span>*</span></label>
         <input id="input__name" type="text">
