--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="container d-flex flex-column justify-content-center align-items-center mt-5"> 
+  <div class="container d-flex flex-column justify-content-center align-items-center mt-5 px-0"> 
     <div class="modal fade" id="index__modal">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -26,14 +26,26 @@
       <button class="search-submit btn btn-primary" type="submit">Tìm kiếm</button>
     </form>
     <div class="buttons-wrapper d-flex justify-content-between w-100"> <a class="bg-danger align-self-start btn btn--delete-selected my-4 disabled" data-toggle="modal" data-target="#index__modal" data-backdrop="static" data-keyboard="false"><span class="text-light"><i class="fas fa-trash-alt mr-2"></i></span><span class="text-light ml-2">Xóa các mục được chọn</span></a><a class="bg-success align-self-start btn btn--add my-4" href="create.html"><span class="text-light"> <i class="fas fa-plus-circle"></i></span><span class="text-light ml-2">Thêm học viên </span></a></div>
-    <table class="table table-striped">
+    <ul class="pagination">
+      <li class="page-item btn disabled"><a class="page-link"><i class="fas fa-angle-double-left"></i></a></li>
+      <li class="page-item btn disabled"><a class="page-link"><i class="fas fa-angle-left"></i></a></li>
+      <li class="page-item btn active"><a class="page-link">1      </a></li>
+      <li class="page-item btn"><a class="page-link">2</a></li>
+      <li class="page-item btn"><a class="page-link">3</a></li>
+      <li class="page-item btn"><a class="page-link">4</a></li>
+      <li class="page-item btn"><a class="page-link">...</a></li>
+      <li class="page-item btn"><a class="page-link"> <i class="fas fa-angle-right"></i></a></li>
+      <li class="page-item btn"><a class="page-link"><i class="fas fa-angle-double-right"></i></a></li>
+    </ul>
+    <table class="table table-striped my-4">
       <thead class="thead-dark">
         <tr class="table-head">
           <th> 
             <input type="checkbox">
           </th>
           <th>Họ tên</th>
-          <th>Năm sinh</th>
+          <th>Ngày sinh </th>
+          <th>Giới tính</th>
           <th>Email</th>
           <th>Số điện thoại</th>
           <th>Thao tác</th>
@@ -45,6 +57,17 @@
         </tr>
       </tbody>
     </table>
+    <ul class="pagination">
+      <li class="page-item btn disabled"><a class="page-link"><i class="fas fa-angle-double-left"></i></a></li>
+      <li class="page-item btn disabled"><a class="page-link"><i class="fas fa-angle-left"></i></a></li>
+      <li class="page-item active"><a class="page-link">1      </a></li>
+      <li class="page-item"><a class="page-link">2</a></li>
+      <li class="page-item"><a class="page-link">3</a></li>
+      <li class="page-item"><a class="page-link">4</a></li>
+      <li class="page-item"><a class="page-link">...</a></li>
+      <li class="page-item"><a class="page-link"> <i class="fas fa-angle-right"></i></a></li>
+      <li class="page-item"><a class="page-link"><i class="fas fa-angle-double-right"></i></a></li>
+    </ul>
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
