--- a/public/edit.html
+++ b/public/edit.html
@@ -22,7 +22,7 @@
         </div>
       </div>
     </div>
-    <h1 class="text-center">Chỉnh sửa thông tin</h1>
+    <h1 class="text-center"> <a href="edit.html">Chỉnh sửa thông tin</a></h1>
     <form class="main-form w-100" action="">
       <div class="form-group">
         <label for="name">Họ tên <span>*</span></label>
