--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
       <input class="form-control search-input" type="text" placeholder="Tìm theo tên, năm sinh...">
       <button class="search-submit btn btn-outline-dark" type="button"> <i class="fas fa-search"></i></button>
     </form>
+    <p class="search__result text-center"> </p>
     <div class="buttons-wrapper d-flex justify-content-center w-100"> <a class="bg-danger align-self-start btn btn--delete-selected my-4 disabled" data-toggle="modal" data-target="#index__modal" data-backdrop="static" data-keyboard="false"><span class="text-light"><i class="fas fa-trash-alt mr-2"></i></span><span class="text-light ml-2">Xóa các mục được chọn</span></a>
       <div class="custom-pagination d-flex justify-content-between align-items-center mx-auto"> 
         <button class="custom-pagination__item btn first-page"><i class="fas fa-angle-double-left"></i></button>
