--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <p class="loading__text">Vui lòng đợi trong giây lát</p>
   </div>
   <div class="page-wrapper container flex-column justify-content-center align-items-center mt-5 px-0"> 
+    <button id="check-btn" type="button">Check!</button>
     <div class="modal fade" id="index__modal">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -63,19 +64,13 @@
       </thead>
       <tbody></tbody>
     </table>
-    <ul class="pagination">
-      <li class="page-item btn first-page"><a class="page-link"><i class="fas fa-angle-double-left"></i></a></li>
-      <li class="page-item btn prev-page"><a class="page-link"><i class="fas fa-angle-left"></i></a></li>
-      <li class="page-item active"><a class="page-link">1      </a></li>
-      <li class="page-item"><a class="page-link">2</a></li>
-      <li class="page-item"><a class="page-link">3</a></li>
-      <li class="page-item"><a class="page-link">4</a></li>
-      <li class="page-item">
-        <button class="page-link choose-page-btn" type="button" data-toggle="modal" data-target="#choose-page__modal" data-backdrop="static" data-keyboard="false">...</button>
-      </li>
-      <li class="page-item next-page"><a class="page-link"> <i class="fas fa-angle-right"></i></a></li>
-      <li class="page-item last-page"><a class="page-link"><i class="fas fa-angle-double-right"></i></a></li>
-    </ul>
+    <div class="custom-pagination d-flex justify-content-between align-items-center mx-auto"> 
+      <button class="custom-pagination__item btn first-page"><i class="fas fa-angle-double-left"></i></button>
+      <button class="custom-pagination__item btn prev-page"><i class="fas fa-angle-left"></i></button>
+      <p class="custom-pagination__display-text"></p>
+      <button class="custom-pagination__item btn next-page"><i class="fas fa-angle-right"></i></button>
+      <button class="custom-pagination__item btn last-page"><i class="fas fa-angle-double-right"></i></button>
+    </div>
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
