--- a/public/index.html
+++ b/public/index.html
@@ -6,75 +6,22 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="loading-wrapper">
-    <div class="spinner-border text-primary loading"></div>
-    <p class="loading__text">Vui lòng đợi trong giây lát</p>
-  </div>
-  <div class="page-wrapper container flex-column justify-content-center align-items-center mt-5 px-0"> 
-    <button id="check-btn" type="button">Check!</button>
-    <div class="modal fade" id="index__modal">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-body">
-            <p class="modal__text"></p>
-          </div>
-          <div class="modal-footer d-flex justify-content-center"><a class="btn btn-success modal--success" data-dismiss="modal">Xác nhận</a><a class="btn btn-secondary modal--cancel ml-4" data-dismiss="modal">Hủy bỏ</a></div>
-        </div>
+  <div class="index-wrapper flex-column justify-content-center align-items-center mx-auto"> 
+    <h1 class="text-center mb-4"> <a href="index.html">Đăng nhập</a></h1>
+    <form class="login-form d-flex flex-column align-items-center" action="">
+      <div class="input-group">
+        <label for="email-input">Email</label>
+        <input id="email-input" type="text">
       </div>
-    </div>
-    <div class="modal fade" id="choose-page__modal">
-      <div class="modal-dialog modal-dialog-centered modal-sm">
-        <div class="modal-content">
-          <div class="modal-body">
-            <p class="choose-page__text text-center">Nhập số trang</p>
-            <input class="choose-page__input d-block mx-auto mt-3" type="number">
-          </div>
-          <div class="modal-footer d-flex justify-content-center"><a class="btn btn-success choose-page__confirm" data-dismiss="modal">Xác nhận</a><a class="btn btn-secondary choose-page__cancel ml-3" data-dismiss="modal">Hủy bỏ</a></div>
-        </div>
+      <div class="input-group">
+        <label for="password-input">Mật khẩu</label>
+        <input id="password-input" type="text">
       </div>
-    </div>
-    <h1 class="text-center"> <a href="index.html">Danh sách hội viên</a></h1>
-    <form class="search-area" action="">
-      <input class="form-control search-input" type="text" placeholder="Tìm theo tên, năm sinh...">
-      <button class="search-submit btn btn-outline-dark" type="button"> <i class="fas fa-search"></i></button>
+      <div class="input-group d-flex justify-content-center"><a class="btn btn-success login-confirm">Xác nhận</a></div>
     </form>
-    <p class="search__result text-center"></p>
-    <div class="buttons-wrapper d-flex justify-content-center w-100"> <a class="bg-danger align-self-start btn btn--delete-selected my-4 disabled" data-toggle="modal" data-target="#index__modal" data-backdrop="static" data-keyboard="false"><span class="text-light"><i class="fas fa-trash-alt mr-2"></i></span><span class="text-light ml-2">Xóa các mục được chọn</span></a>
-      <div class="custom-pagination d-flex justify-content-between align-items-center mx-auto"> 
-        <button class="custom-pagination__item btn first-page"><i class="fas fa-angle-double-left"></i></button>
-        <button class="custom-pagination__item btn prev-page"><i class="fas fa-angle-left"></i></button>
-        <p class="custom-pagination__display-text"></p>
-        <button class="custom-pagination__item btn next-page"><i class="fas fa-angle-right"></i></button>
-        <button class="custom-pagination__item btn last-page"><i class="fas fa-angle-double-right"></i></button>
-      </div><a class="bg-success align-self-start btn btn--add my-4" href="create.html"><span class="text-light"> <i class="fas fa-plus-circle"></i></span><span class="text-light ml-2">Thêm hội viên</span></a>
-    </div>
-    <table class="table table-striped mb-4">
-      <thead class="thead-dark">
-        <tr class="table-head">
-          <th> 
-            <input type="checkbox">
-          </th>
-          <th>Họ tên</th>
-          <th>Ngày sinh </th>
-          <th>Giới tính</th>
-          <th>Email</th>
-          <th>Số điện thoại</th>
-          <th>Thao tác</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <div class="custom-pagination d-flex justify-content-between align-items-center mx-auto"> 
-      <button class="custom-pagination__item btn first-page"><i class="fas fa-angle-double-left"></i></button>
-      <button class="custom-pagination__item btn prev-page"><i class="fas fa-angle-left"></i></button>
-      <p class="custom-pagination__display-text"></p>
-      <button class="custom-pagination__item btn next-page"><i class="fas fa-angle-right"></i></button>
-      <button class="custom-pagination__item btn last-page"><i class="fas fa-angle-double-right"></i></button>
-    </div>
-    <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
-    <script src="index.js"></script>
   </div>
+  <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
