--- a/public/edit.html
+++ b/public/edit.html
@@ -59,7 +59,7 @@
       let userID = location.href.split("?")[1];
       
       $.get(
-        `https://changable-list-test.herokuapp.com/users/${userID}`,
+        `https://changeable-list.herokuapp.com/users/${userID}`,
         function(data) {
           $("input")[0].value = data.name;
           $("input")[1].value = data.birthday;
@@ -86,7 +86,7 @@
       $("#save").click(() => {
         $.ajax({
           type: "PUT",
-          url: `https://changable-list-test.herokuapp.com/users/${userID}`,
+          url: `https://changeable-list.herokuapp.com/users/${userID}`,
           data: {
             "name": $("input")[0].value,
             "birthday": $("input")[1].value,
