--- a/public/login.html
+++ b/public/login.html
@@ -33,6 +33,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   <script src="script.js"></script>
   <script>
+    console.log("start")
     console.log( "Active user: " + localStorage.getItem("active-user-name") )
     console.log( "Active user ID: " + localStorage.getItem("active-user-id") )
     console.log( "Active token: " + localStorage.getItem("changeable-list-token") )
