--- a/public/login.html
+++ b/public/login.html
@@ -18,7 +18,7 @@
         <input id="password-input" type="text" placeholder="123">
       </div>
       <div class="input-group d-flex justify-content-center"><a class="btn btn-success login-confirm">Xác nhận</a></div>
-    </form><a href="https://journey-card-game.herokuapp.com/">News: Journey - the card game đã early access</a>
+    </form><a class="d-block mx-auto" href="https://journey-card-game.herokuapp.com/">News không liên quan: pet project Journey - the card game đã early access :)) <span class="text-primary">Click!</span></a>
   </div>
   <div class="login-modal"> 
     <div class="login-modal__body">
