--- a/public/login.html
+++ b/public/login.html
@@ -18,7 +18,14 @@
         <input id="password-input" type="text" placeholder="123">
       </div>
       <div class="input-group d-flex justify-content-center"><a class="btn btn-success login-confirm">Xác nhận</a></div>
-    </form><a class="d-block mx-auto" href="https://journey-card-game.herokuapp.com/">News không liên quan: pet project Journey - the card game đã early access :)) <span class="text-primary">Click!</span></a>
+    </form>
+    <div class="projects">
+      <p class="mb-2">Các project khác của <a class="text-primary" href="https://github.com/ducnt444/">tôi:  </a></p>
+      <ul> 
+        <li class="d-block mx-auto"> <a class="text-primary" href="https://journey-card-game.herokuapp.com/">- Journey - the card game: pet project, early access</a></li>
+        <li class="d-block mx-auto"> <a class="text-primary" href="https://ducnt444.github.io/halo/">- Halo: website tĩnh chủ đề bán máy ảnh</a></li>
+      </ul>
+    </div>
   </div>
   <div class="login-modal"> 
     <div class="login-modal__body">
