--- a/public/login.html
+++ b/public/login.html
@@ -20,10 +20,10 @@
       <div class="input-group d-flex justify-content-center"><a class="btn btn-success login-confirm">Xác nhận</a></div>
     </form>
     <div class="projects">
-      <p class="mb-2">Các project khác của <a class="text-primary" href="https://github.com/ducnt444/">tôi:  </a></p>
+      <p class="mb-3">Các project khác của <a class="text-primary" href="https://github.com/ducnt444/">tôi:  </a></p>
       <ul> 
-        <li class="d-block mx-auto"> <a class="text-primary" href="https://journey-card-game.herokuapp.com/">- Journey - the card game: pet project, early access</a></li>
-        <li class="d-block mx-auto"> <a class="text-primary" href="https://ducnt444.github.io/halo/">- Halo: website tĩnh chủ đề bán máy ảnh</a></li>
+        <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://journey-card-game.herokuapp.com/">- Journey - the card game: pet project, early access</a></li>
+        <li class="d-block mx-auto mt-1"><a class="text-primary" href="https://ducnt444.github.io/halo/">- Halo: website tĩnh chủ đề bán máy ảnh</a></li>
       </ul>
     </div>
   </div>
