--- a/public/login.html
+++ b/public/login.html
@@ -22,7 +22,7 @@
     <div class="projects">
       <p class="mb-3">Các project khác của <a class="text-primary" href="https://github.com/ducnt444/">tôi:  </a></p>
       <ul> 
-        <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://journey-card-game.herokuapp.com/">- Journey - the card game: pet project, early access</a></li>
+        <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://journey-card-game.herokuapp.com/">- Journey - the card game: pet project, alpha test</a></li>
         <li class="d-block mx-auto mt-1"><a class="text-primary" href="https://ducnt444.github.io/halo/">- Halo: website tĩnh chủ đề bán máy ảnh</a></li>
       </ul>
     </div>
