update PLANETARY link

--- a/public/login.html
+++ b/public/login.html
@@ -20,9 +20,9 @@
       <div class="input-group d-flex justify-content-center"><a class="btn btn-success login-confirm">Xác nhận</a></div>
     </form>
     <div class="projects">
-      <p class="mb-3">Các project khác của <a class="text-primary" href="https://github.com/ducnt444/">tôi:  </a></p>
+      <p class="mb-3">Các project khác của tôi:  </p>
       <ul> 
-        <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://journey-card-game.herokuapp.com/">- Journey - the card game: pet project, alpha test</a></li>
+        <li class="d-block mx-auto mt-1"> <a class="text-primary" href="https://ducnt444.github.io/planetary/">- PLANETARY: demo space travel (mobile), sử dụng Vue.JS</a></li>
         <li class="d-block mx-auto mt-1"><a class="text-primary" href="https://ducnt444.github.io/halo/">- Halo: website tĩnh chủ đề bán máy ảnh</a></li>
       </ul>
     </div>
